--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                                     </div>
                                     <div class="row mt-3">
                                         <div class="col-sm-4"><strong class="text-uppercase">Direccion:</strong></div>
-                                        <div class="col-sm-8">Avenida de las Estrellas, Valladolid, Castilla y Leon.
+                                        <div class="col-sm-8">Calle Nebulosa, Valladolid, Castilla y Leon.
                                         </div>
                                     </div>
                                     <div class="row mt-3">
@@ -215,7 +215,7 @@
                             <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50"
                                 data-aos-duration="500">
                                 <div class="card-body cc-experience-header">
-                                    <p>Octubre 2020 - Presente</p>
+                                    <p>Octubre 2020 - Enero 2021</p>
                                     <div class="h4">Colegio Publico</div>
                                 </div>
                             </div>
@@ -236,7 +236,7 @@
                                 data-aos-duration="500">
                                 <div class="card-body cc-experience-header">
                                     <p>Octubre 2020 - Diciembre 2020</p>
-                                    <div class="h4">Domocilio</div>
+                                    <div class="h4">Domicilio</div>
                                 </div>
                             </div>
                             <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
@@ -319,7 +319,7 @@
                                 data-aos-duration="500">
                                 <div class="card-body cc-experience-header">
                                     <p>Diciembre 2018 - Febrero 2019</p>
-                                    <div class="h4">Centro infantil - La Luna Azul</div>
+                                    <div class="h4">Centro infantil  La Luna Azul</div>
                                 </div>
                             </div>
                             <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
@@ -349,10 +349,9 @@
                                 </div>
                             </div>
                             <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
-                                <div class="card-body">
+                                <div class="card-body" style="padding-top: 5em;"> 
                                     <div class="h5">Tecnico en Educacion Infantil</div>
                                     <p class="category">IES Emilio Ferrari, Valladolid</p>
-                                    <p>Aprendiendo el comportamiento de los niños para luego poder educarlos y hacer que crezcan de la manera correcta y adecuada.</p>
                                 </div>
                             </div>
                         </div>
@@ -368,10 +367,9 @@
                                 </div>
                             </div>
                             <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
-                                <div class="card-body">
-                                    <div class="h5">Ciencias de la Salud</div>
+                                <div class="card-body" style="padding-top: 5em;"> 
+                                    <div class="h5">Ciencias Sociales</div>
                                     <p class="category">Diego de Praves, Valladolid</p>
-                                    <p>Bachillerato de ciencias de la salud, con una nota media de: placeholder</p>
                                 </div>
                             </div>
                         </div>
@@ -522,7 +520,7 @@
                                             <div class="col-md-6">
                                                 <div class="card-body">
                                                     <p class="mb-0"><strong>Direccion </strong></p>
-                                                    <p class="pb-2">Avenida de las Estrellas, Valladolid, Castilla y Leon.</p>
+                                                    <p class="pb-2">Calle de la Nebulosa, Valladolid, Castilla y Leon.</p>
                                                     <p class="mb-0"><strong>Movil</strong></p>
                                                     <p class="pb-2">+34 607 971 997</p>
                                                     <p class="mb-0"><strong>Email</strong></p>
